# tower-serve-dir-perf

./: Cargo.toml  README.md  bench.sh  k6_bench.js  results.txt
src/: main.rs
static/: basic.html
