[package]
name = "static-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.12"
futures-core = "0.3.27"
http-body = "0.4.5"
hyper = { version = "0.14.25", features = ["full"] }
pin-project = "1.0.12"
tokio = { version = "1.26.0", features = ["full"] }
tokio-util = "0.7.7"
tower-http = { version = "0.4.0", features = ["fs"] }

[dev-dependencies]
axum-test = "7.1.0"
paste = "1.0.12"
