[package]
name = "static-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.12"
bytes = "1.4.0"
http-body = "0.4.5"
hyper = { version = "0.14.25", features = ["full"] }
tokio = { version = "1.26.0", features = ["full"] }

[dev-dependencies]
axum-test = "7.1.0"
paste = "1.0.12"
